Include CA Certs in dockerfile

--- a/other/Dockerfile
+++ b/other/Dockerfile
@@ -7,8 +7,7 @@ FROM node:20-bookworm-slim as base
 ENV NODE_ENV production
 
 # Install openssl for Prisma
-RUN apt-get update && apt-get install -y openssl sqlite3
-# ^Removed ' ca-certificates' may need to add back if ssl issues arise
+RUN apt-get update && apt-get install -y openssl sqlite3 ca-certificates
 
 # Install all node_modules, including dev dependencies
 FROM base as deps
