--- a/fly.toml
+++ b/fly.toml
@@ -5,48 +5,50 @@ kill_timeout = 5
 processes = [ ]
 
 [experimental]
-allowed_public_ports = [ ]
-auto_rollback = true
+  allowed_public_ports = []
+  auto_rollback = true
+  cmd = "start.sh"
+  entrypoint = "sh"
 
 [mounts]
-source = "data"
-destination = "/data"
+  source = "data"
+  destination = "/data"
 
-[deploy]
-release_command = "node ./other/sentry-create-release"
+# [deploy]
+#  release_command = "node ./other/sentry-create-release"
 
 [[services]]
-internal_port = 8_080
-processes = [ "app" ]
-protocol = "tcp"
-script_checks = [ ]
+  internal_port = 8_080
+  processes = [ "app" ]
+  protocol = "tcp"
+  script_checks = [ ]
 
   [services.concurrency]
-  hard_limit = 100
-  soft_limit = 80
-  type = "requests"
+    hard_limit = 100
+    soft_limit = 80
+    type = "requests"
 
   [[services.ports]]
-  handlers = [ "http" ]
-  port = 80
-  force_https = true
+    handlers = [ "http" ]
+    port = 80
+    force_https = true
 
   [[services.ports]]
-  handlers = [ "tls", "http" ]
-  port = 443
+    handlers = [ "tls", "http" ]
+    port = 443
 
   [[services.tcp_checks]]
-  grace_period = "1s"
-  interval = "15s"
-  restart_limit = 0
-  timeout = "2s"
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 0
+    timeout = "2s"
 
   [[services.http_checks]]
-  interval = "10s"
-  grace_period = "5s"
-  method = "get"
-  path = "/resources/healthcheck"
-  protocol = "http"
-  timeout = "2s"
-  tls_skip_verify = false
-  headers = { }
+    interval = "10s"
+    grace_period = "5s"
+    method = "get"
+    path = "/resources/healthcheck"
+    protocol = "http"
+    timeout = "2s"
+    tls_skip_verify = false
+    headers = { }
