--- a/fly.toml
+++ b/fly.toml
@@ -18,7 +18,7 @@ processes = [ ]
 #  release_command = "node ./other/sentry-create-release"
 
 [[services]]
-  internal_port = 8_080
+  internal_port = 8080
   processes = [ "app" ]
   protocol = "tcp"
   script_checks = [ ]
@@ -44,7 +44,7 @@ processes = [ ]
     timeout = "2s"
 
   [[services.http_checks]]
-    interval = "10s"
+    interval = "15s"
     grace_period = "5s"
     method = "get"
     path = "/resources/healthcheck"
