--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:e2e:run": "cross-env CI=true playwright test",
     "test:e2e:install": "npx playwright install --with-deps chromium",
     "typecheck": "tsc",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
+    "up": "node ./other/setup-swap.js && npx prisma migrate deploy && npm start"
   },
   "eslintIgnore": [
     "/node_modules",
