--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DATABASE_PATH="./prisma/data.db"
-DATABASE_URL="file:./data.db?connection_limit=1"
+DATABASE_URL="file:$DATABASE_PATH?connection_limit=1"
 CACHE_DATABASE_PATH="./other/cache.db"
 SESSION_SECRET="super-duper-s3cret"
 INTERNAL_COMMAND_TOKEN="some-made-up-token"
