Add Fly-Client-IP as rate limiter

--- a/fly.toml
+++ b/fly.toml
@@ -12,8 +12,8 @@ processes = [ ]
   source = "myapp_data"
   destination = "/data"
 
-# [deploy]
-#  release_command = "node ./other/sentry-create-release"
+[deploy]
+  release_command = "node ./other/sentry-create-release"
 
 [[services]]
   internal_port = 8080
