--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "isbot": "^3.6.12",
     "lru-cache": "^10.0.0",
     "morgan": "^1.10.0",
+    "nanoid": "^4.0.2",
     "prisma": "^5.0.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
